force-app/main/default/objects/FinancialAccount/FinancialAccount.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>