force-app/main/default/objects/FinancialAccount/fields/Billing_Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle_Date__c</fullName>
    <description>Stores the day of the month on which the credit card billing cycle ends. All transactions made up to this date are included in the current billing statement.</description>
    <inlineHelpText>Enter the day of the month when the billing cycle closes.</inlineHelpText>
    <label>Billing Cycle Date</label>
    <type>Date</type>
</CustomField>