force-app/main/default/objects/FinancialAccount/fields/Current_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Current_Outstanding__c</fullName>
    <description>Current outstanding loan amount</description>
    <label>Current Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>