force-app/main/default/objects/FinancialAccount/fields/EMI_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>EMI_Per_Month__c</fullName>
    <formula>IF(
  AND(
    TotalOutstandingAmount &gt; 0,
    InterestRate &gt; 0,
    Term &gt; 0
  ),
  TotalOutstandingAmount *
  (InterestRate / 12 / 100) *
  EXP(Term * LN(1 + InterestRate / 12 / 100)) /
  (EXP(Term * LN(1 + InterestRate / 12 / 100)) - 1),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMI Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>