force-app/main/default/objects/FinancialAccount/fields/Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Amount__c</fullName>
    <description>Stores the amount paid by the customer during their most recent credit card payment. Displayed alongside the Last Payment Date to give the customer a clear view of their recent payment activity.</description>
    <inlineHelpText>Enter the amount the customer paid on their last payment date.</inlineHelpText>
    <label>Last Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>