force-app/main/default/objects/FinancialAccount/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>Records the most recent date on which the customer made a payment towards their credit card outstanding balance. Used to track payment history and display in customer-facing communications.</description>
    <inlineHelpText>Enter the date of the customer&apos;s last credit card payment.</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>