force-app/main/default/objects/FinancialAccount/fields/Original_Term__c.field-meta.xml
<CustomField>
    <fullName>Original_Term__c</fullName>
    <description>Stores original loan tenure at time of creation. Never updated after restructuring.</description>
    <label>Original Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>