force-app/main/default/objects/FinancialAccount/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>Picklist value to hold loan subtype.</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Car Loan</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>