force-app/main/default/objects/FinancialAccount/fields/Total_Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Amount__c</fullName>
    <label>Total Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>