force-app/main/default/objects/FinancialAccount/listViews/All_FinancialAccounts.listView-meta.xml
<ListView>
    <fullName>All_FinancialAccounts</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>Product</columns>
    <columns>Banker</columns>
    <columns>RelatedFinancialAccount</columns>
    <filterScope>Everything</filterScope>
    <label>All Financial Accounts</label>
</ListView>